cmake_minimum_required(VERSION 3.28)
project(Taller1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Ejercicio4 Ejercicio_4.cpp)
add_executable(Ejercicio5 Ejercicio_5.cpp)
add_executable(Ejercicio6 Ejercicio_6.cpp)
add_executable(Insertion InsertionSort.cpp)
add_executable(Selection SelectionSort.cpp)
add_executable(Bubble BubbleSort.cpp)
add_executable(Binary BinarySearch.cpp)
add_executable(Shell ShellSort.cpp)
add_executable(Residuos Residuos.cpp)
add_executable(Merge MergeSort.cpp)
add_executable(Base base.cpp)
add_executable(Quick QuickSort.cpp)
add_executable(Lista ListaEnlazada.cpp LISTA.h)
add_executable(DoubleList DoubleList.cpp DOUBLELIST.h)
add_executable(EjercicioPilas EjercicioPilas.cpp PILA_ENTEROS.h)
add_executable(Multilista MultilistaPersonas.cpp MULTILISTA.h)
add_executable(ArbolBinario ArbolBinarioOrdenado.cpp ARBOLBINARIOORDENADO.h)
add_executable(Rojinegro Rojinegro.cpp RedBlackTree.h)
add_executable(PilasColas PilasColas/main.cpp PilasColas/pila1.h PilasColas/estructura1.h PilasColas/cola1.h)